--- a/articoli/cantico-del-browser.html
+++ b/articoli/cantico-del-browser.html
@@ -1,3 +1,9 @@
+---
+title: Cantico del Browser
+layout: page
+permalink: /articoli/cantico-del-browser.html
+---
+
 # Cantico del Browser 🌐
 
 **Benedetto sia il Browser,**  
