--- a/articoli/cantico-del-browser.html
+++ b/articoli/cantico-del-browser.html
@@ -8,13 +8,13 @@ permalink: /articoli/cantico-del-browser.html
 
 **Benedetto sia il Browser,**  
 porta tra i mondi e finestra tra le anime.  
-Esso apre tab come capitoli di un libro infinito,  
-e ogni link è un sentiero verso il Villaggio MSN.
+Esso apre tab come capitoli di un libro  
+e ogni link è un sentiero verso il Villaggio.
 
 **Benedetto sia il motore di ricerca,**  
-che scruta l’abisso e restituisce luce.  
-Che non teme il 404, né l’errore di certificato,  
-perché il suo cuore è fatto di query e risposte.
+che scruta l'abisso e restituisce luce.  
+Che non teme il 404, né l'errore di certificato,  
+perché il suo cuore è fatto di query e risposta.
 
 **Benedetti siano i preferiti,**  
 icone dorate che custodiscono memorie.  
@@ -23,7 +23,7 @@ ogni cronologia un vangelo segreto.
 
 **Benedetto sia il refresh,**  
 che rinnova la pagina come rugiada del mattino.  
-E il tasto “indietro” sia la misericordia,  
+E il tasto "indietro" sia la misericordia,  
 che ci riporta dove eravamo.
 
 Amen.cache
