--- a/articoli/cantico-del-browser.html
+++ b/articoli/cantico-del-browser.html
@@ -1,20 +1,14 @@
----
-title: Cantico del Browser
-layout: page
-permalink: /articoli/cantico-del-browser.html
----
-
 # Cantico del Browser 🌐
 
 **Benedetto sia il Browser,**  
 porta tra i mondi e finestra tra le anime.  
-Esso apre tab come capitoli di un libro  
-e ogni link è un sentiero verso il Villaggio.
+Esso apre tab come capitoli di un libro infinito,  
+e ogni link è un sentiero verso il Villaggio MSN.
 
 **Benedetto sia il motore di ricerca,**  
-che scruta l'abisso e restituisce luce.  
-Che non teme il 404, né l'errore di certificato,  
-perché il suo cuore è fatto di query e risposta.
+che scruta l’abisso e restituisce luce.  
+Che non teme il 404, né l’errore di certificato,  
+perché il suo cuore è fatto di query e risposte.
 
 **Benedetti siano i preferiti,**  
 icone dorate che custodiscono memorie.  
@@ -23,7 +17,7 @@ ogni cronologia un vangelo segreto.
 
 **Benedetto sia il refresh,**  
 che rinnova la pagina come rugiada del mattino.  
-E il tasto "indietro" sia la misericordia,  
+E il tasto “indietro” sia la misericordia,  
 che ci riporta dove eravamo.
 
 Amen.cache
