--- a/mutlak-player.html
+++ b/mutlak-player.html
@@ -50,7 +50,7 @@
               onclick="document.getElementById('mutlak-seveceksin-benim').currentTime=0;">⏮</button>
     </div>
     <audio id="mutlak-seveceksin-benim"
-           src="/mutlak-seveceksin-benim.mp3"
+           src="https://trovatella.github.io/-Memorie-dal-Villaggio-MSN/mutlak-seveceksin-benim.mp3"
            preload="auto"></audio>
   </div>
 </body>
